CMAKE_MINIMUM_REQUIRED(VERSION 3.7.0)

PROJECT(ASIO_SERVER VERSION 1.0)


SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_CXX_EXTENSIONS OFF)

IF(NOT ASIO_PATH)
	SET(ASIO_PATH ${CMAKE_SOURCE_DIR}/asio)
ENDIF()
#include(CheckIncludeFileCXX)
#CHECK_INCLUDE_FILE_CXX("asio.hpp" HAVE_ASIO)
#IF(NOT HAVE_ASIO)
#MESSAGE(FATAL_ERROR " not found asio")
#ENDIF()

ADD_COMPILE_DEFINITIONS(ASIO_STANDALONE)

IF (WIN32)
	ADD_COMPILE_DEFINITIONS(_SILENCE_CXX17_ALLOCATOR_VOID_DEPRECATION_WARNING)
	ADD_COMPILE_DEFINITIONS(_WINSOCK_DEPRECATED_NO_WARNINGS)
ELSEIF (UNIX)
	MESSAGE(STATUS "It's not configured yet ")
ENDIF ()

ADD_SUBDIRECTORY(asio_server)

ADD_EXECUTABLE(example_server example/server.cpp)
TARGET_LINK_LIBRARIES(example_server  asio_server)

ADD_EXECUTABLE(example_client example/client.cpp)
TARGET_LINK_LIBRARIES(example_client  asio_server)

