
LIST(APPEND INCLUDE_PATH ${ASIO_PATH})
LIST(APPEND INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)

FILE(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

file(GLOB_RECURSE CURRENT_HEADERS  ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
source_group("Include" FILES ${CURRENT_HEADERS})

ADD_LIBRARY(asio_server ${SRC} ${CURRENT_HEADERS})



TARGET_INCLUDE_DIRECTORIES(asio_server PUBLIC  ${INCLUDE_PATH})





